# UFS_UTILS

.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ubuntu_gcc.yaml
ci/: spack.yaml
docs/source/: chgres_cube.rst
driver_scripts/: driver_grid.jet.sh
fix/: link_fixdirs.sh
modulefiles/: build.gaeac5.intel.lua  build.gaeac6.intel.lua  build.hera.gnu.lua  build.hera.intel.lua  build.hera.intelllvm.lua  build.hercules.intel.lua  build.hercules.intelllvm.lua  build.jet.intel.lua  build.jet.intelllvm.lua  build.noaacloud.intel.lua  build.orion.intel.lua  build.orion.intelllvm.lua  build.s4.intel.lua  build.wcoss2.intel.lua  common4noaacloud.lua
reg_tests/chgres_cube/: driver.jet.sh
reg_tests/cpld_gridgen/: rt.conf  rt.sh
reg_tests/cpld_gridgen/parm/: grid.nml.IN
reg_tests/global_cycle/: C192.gsi_lndincsoilnoahmp.sh  C192.gsitile_lndincsoilnoahmp.sh  C192.jedi_lndincsoilnoahmp.sh  C768.lndincsnow.sh  driver.hera.sh  driver.hercules.sh  driver.jet.sh  driver.orion.sh  driver.wcoss2.sh
reg_tests/grid_gen/: c96.uniform.sh  driver.jet.sh
reg_tests/ice_blend/: driver.jet.sh
reg_tests/ocnice_prep/: rt.sh
reg_tests/snow2mdl/: driver.jet.sh
reg_tests/weight_gen/: driver.jet.sh
sorc/: machine-setup.sh
sorc/chgres_cube.fd/: atm_input_data.F90  model_grid.F90  program_setup.F90  sfc_input_data.F90
sorc/cpld_gridgen.fd/: gen_fixgrid.F90  grdvars.F90  inputnml.F90  postwgts.F90
sorc/gblevents.fd/: gblevents.f
sorc/global_cycle.fd/: cycle.f90  land_increments.f90  read_write_data.f90
sorc/ocean_merge.fd/: CMakeLists.txt  merge.F90  merge_lake_ocnmsk.F90  namelist.F90  read_write.F90  utils.F90
sorc/ocnice_prep.fd/: ocniceprep.F90  restarts_mod.F90  utils_mod.F90
sorc/ocnice_prep.fd/docs/: ocnice_prep.md
sorc/orog_mask_tools.fd/orog.fd/: io_utils.F90  mtnlm7_oclsm.F90  orog_utils.F90
tests/: CMakeLists.txt
tests/global_cycle/: ftst_read_increments.F90
tests/ocean_merge/: CMakeLists.txt  ftst_merge.F90  ftst_read_lake_mask.F90  ftst_read_nml.F90  ftst_read_ocean_frac.F90
tests/ocean_merge/data/: C48.mx500.tile1.nc  input.nml  oro.C48.tile1.nc
tests/ocnice_prep/: CMakeLists.txt  ftst_qcice.F90
tests/orog/: CMakeLists.txt  ftst_find_nearest_pole_pts.F90  ftst_find_poles.F90  ftst_get_index.F90  ftst_get_xnsum.F90  ftst_get_xnsum2.F90  ftst_get_xnsum3.F90  ftst_inside_polygon.F90  ftst_qc_orog_by_ramp.F90  ftst_read_global_mask.F90  ftst_read_global_orog.F90  ftst_read_mask.F90  ftst_read_mdl_dims.F90  ftst_read_mdl_grid_file.F90  ftst_rm_isolated_pts.F90  ftst_transpose.F90
tests/orog/data/: C12_grid.tile1.nc  C48.mx500.tile1.nc  landcover.umd.lowres.nc  topography.antarctica.ramp.lowres.nc  topography.gmted2010.lowres.nc
ush/: cpld_gridgen.sh  global_cycle.sh  global_cycle_driver.sh
util/gdas_init/: driver.jet.sh  set_fixed_files.sh
util/weight_gen/: run.jet.sh
